fixed z-index issue

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -33,6 +33,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 1;
 }
 
 .area {
